Added mock variable

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
+    <script type="text/javascript">
+      // Set to false to disable mocking
+      var mock = true;
+    </script>
+
     <!-- Polymer Elements -->
     <script src="//assets.library.uq.edu.au/reusable-components/resources/preloader.js" async></script>
     <script src="//assets.library.uq.edu.au/reusable-components/webcomponentsjs/webcomponents-lite.js" async></script>
