--- a/src/index.html
+++ b/src/index.html
@@ -30,11 +30,11 @@
     <!-- endinject -->
     <!-- endbuild -->
   </head>
-  <body ng-cloc>
+  <body ng-cloak>
     <uq-minimal-header></uq-minimal-header>
     <uql-menu></uql-menu>
 
-    <div ui-view class="hp"></div>
+    <div ui-view class="hp" flex></div>
 
     <uql-connect-footer></uql-connect-footer>
     <uq-minimal-footer></uq-minimal-footer>
