--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html ng-app="uql">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Home Page | UQ Library</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width" />
 
     <script type="text/javascript">
       // Set to false to disable mocking
@@ -12,9 +12,19 @@
     </script>
 
     <!-- Polymer Elements -->
-    <script src="//assets.library.uq.edu.au/reusable-components/resources/preloader.js" async></script>
-    <script src="//assets.library.uq.edu.au/reusable-components/webcomponentsjs/webcomponents-lite.js" async></script>
-    <link rel="import" href="//assets.library.uq.edu.au/reusable-components/elements.vulcanized.html" async>
+    <script
+      src="https://assets.library.uq.edu.au/reusable-components/resources/preloader.js"
+      async
+    ></script>
+    <script
+      src="https://assets.library.uq.edu.au/reusable-components/webcomponentsjs/webcomponents-lite.js"
+      async
+    ></script>
+    <link
+      rel="import"
+      href="https://assets.library.uq.edu.au/reusable-components/elements.vulcanized.html"
+      async
+    />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -39,7 +49,10 @@
     <uql-connect-footer></uql-connect-footer>
     <uq-minimal-footer></uq-minimal-footer>
 
-    <script src="//assets.library.uq.edu.au/reusable-components/libwww/load.js" async></script>
+    <script
+      src="https://assets.library.uq.edu.au/reusable-components/libwww/load.js"
+      async
+    ></script>
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
@@ -56,6 +69,5 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
-
   </body>
 </html>
